--- a/calculator_v2.html
+++ b/calculator_v2.html
@@ -40,6 +40,9 @@
         </h1>
 
         <div class="mb-8">
+          <h3 class="text-lg font-semibold text-secondary mb-4">
+            Kosten für postalischen Payroll Prozess
+          </h3>
           <div class="grid grid-cols-1 gap-6">
             <!-- Document count slider -->
             <div class="space-y-2">
@@ -59,12 +62,11 @@
                 type="range"
                 v-model.number="sliderValue"
                 min="0"
-                max="100"
+                max="10000"
                 class="w-full h-2 bg-medium-orange rounded-lg appearance-none cursor-pointer accent-accent"
                 @input="updatePayrollCount"
               />
               <div class="flex justify-between text-xs text-secondary">
-                <span>10</span>
                 <span>100</span>
                 <span>1.000</span>
                 <span>10.000</span>
@@ -114,32 +116,66 @@
                 class="mt-3 p-3 bg-input-bg rounded-lg text-sm text-secondary border border-medium-blue"
               >
                 <h4 class="font-medium mb-2">
-                  Durchschnittliche Kostenverteilung pro Dokument:
+                  Kostenaufschlüsselung pro Dokument:
                 </h4>
-                <ul class="space-y-1">
-                  <li class="flex justify-between">
-                    <span>Erstellung Lohnabrechnung:</span>
-                    <span class="font-medium"
-                      >45% ({{ formatCurrency(manualCost * 0.45) }})</span
+                <ul class="space-y-3">
+                  <li class="flex items-center gap-3">
+                    <span class="w-1/3">Druck und Kuvertierung:</span>
+                    <input
+                      type="number"
+                      v-model.number="costBreakdown.printing"
+                      @input="updateManualCostFromBreakdown"
+                      class="w-1/3 px-2 py-1 border border-medium-blue rounded"
+                    />
+                    <span class="w-1/3 text-right"
+                      >{{ calculatePercentage(costBreakdown.printing) }}%</span
                     >
                   </li>
-                  <li class="flex justify-between">
-                    <span>Druck und Kuvertierung:</span>
-                    <span class="font-medium"
-                      >20% ({{ formatCurrency(manualCost * 0.20) }})</span
+                  <li class="flex items-center gap-3">
+                    <span class="w-1/3">Briefporto:</span>
+                    <input
+                      type="number"
+                      v-model.number="costBreakdown.postage"
+                      @input="updateManualCostFromBreakdown"
+                      class="w-1/3 px-2 py-1 border border-medium-blue rounded"
+                    />
+                    <span class="w-1/3 text-right"
+                      >{{ calculatePercentage(costBreakdown.postage) }}%</span
                     >
                   </li>
-                  <li class="flex justify-between">
-                    <span>Briefporto:</span>
-                    <span class="font-medium"
-                      >20% ({{ formatCurrency(manualCost * 0.20) }})</span
+                  <li class="flex items-center gap-3">
+                    <span class="w-1/3">Verwaltung/Handling:</span>
+                    <input
+                      type="number"
+                      v-model.number="costBreakdown.administration"
+                      @input="updateManualCostFromBreakdown"
+                      class="w-1/3 px-2 py-1 border border-medium-blue rounded"
+                    />
+                    <span class="w-1/3 text-right"
+                      >{{ calculatePercentage(costBreakdown.administration)
+                      }}%</span
                     >
                   </li>
-                  <li class="flex justify-between">
-                    <span>Verwaltung/Handling:</span>
-                    <span class="font-medium"
-                      >15% ({{ formatCurrency(manualCost * 0.15) }})</span
+                  <li class="flex items-center gap-3">
+                    <span class="w-1/3">Sonstiges:</span>
+                    <input
+                      type="number"
+                      v-model.number="costBreakdown.other"
+                      @input="updateManualCostFromBreakdown"
+                      class="w-1/3 px-2 py-1 border border-medium-blue rounded"
+                    />
+                    <span class="w-1/3 text-right"
+                      >{{ calculatePercentage(costBreakdown.other) }}%</span
                     >
+                  </li>
+                  <li
+                    class="flex items-center gap-3 pt-2 border-t border-medium-blue"
+                  >
+                    <span class="w-1/3 font-medium">Gesamt:</span>
+                    <span class="w-1/3 font-medium"
+                      >{{ formatCurrency(totalBreakdownCost) }}</span
+                    >
+                    <span class="w-1/3 text-right font-medium">100%</span>
                   </li>
                 </ul>
               </div>
@@ -169,17 +205,15 @@
                       id="setupFee"
                       type="range"
                       v-model.number="setupFee"
-                      min="0"
-                      max="5000"
+                      min="1500"
+                      max="10000"
                       step="100"
                       class="w-full h-2 bg-medium-blue rounded-lg appearance-none cursor-pointer accent-dark-blue"
                     />
                     <div class="flex justify-between text-xs text-secondary">
-                      <span>€0</span>
-                      <span>€1.250</span>
-                      <span>€2.500</span>
-                      <span>€3.750</span>
-                      <span>€5.000</span>
+                      <span>€1.500</span>
+                      <span>€6.000</span>
+                      <span>€10.000</span>
                     </div>
                   </div>
 
@@ -233,14 +267,12 @@
                       v-model.number="solutionCostPerDocument"
                       min="0"
                       max="3"
-                      step="0.2"
+                      step="0.25"
                       class="w-full h-2 bg-medium-blue rounded-lg appearance-none cursor-pointer accent-dark-blue"
                     />
                     <div class="flex justify-between text-xs text-secondary">
                       <span>€0.00</span>
-                      <span>€0.80</span>
-                      <span>€1.60</span>
-                      <span>€2.40</span>
+                      <span>€1.50</span>
                       <span>€3.00</span>
                     </div>
                   </div>
@@ -321,25 +353,24 @@
     </div>
 
     <script>
-      const { createApp, ref, computed } = Vue;
+      const { createApp, ref, computed, watch } = Vue;
 
       createApp({
         setup() {
           // State
-          const sliderValue = ref(50);
+          const sliderValue = ref(3333.33);
           const payrollCount = ref(1000);
           const manualCost = ref(5.0);
           const setupFee = ref(2500);
           const monthlyFee = ref(500);
           const solutionCostPerDocument = ref(0.5);
-          const showCostBreakdown = ref(false);
 
           // Convert slider position (0-100) to exponential value (10-100,000)
           const updatePayrollCount = () => {
-            const minValue = 10;
+            const minValue = 100;
             const maxValue = 100000;
             // Exponential scaling
-            const scale = Math.pow(maxValue / minValue, 1 / 100);
+            const scale = Math.pow(maxValue / minValue, 1 / 10000);
             payrollCount.value = Math.round(
               minValue * Math.pow(scale, sliderValue.value)
             );
@@ -432,6 +463,61 @@
           // Initialize
           updatePayrollCount();
 
+          // Cost breakdown state
+          const costBreakdown = ref({
+            printing: 1.0,
+            postage: 1.0,
+            administration: 1,
+            other: 1,
+          });
+
+          const showCostBreakdown = ref(false);
+
+          // Calculate total from breakdown
+          const totalBreakdownCost = computed(() => {
+            return Object.values(costBreakdown.value).reduce(
+              (sum, val) => sum + val,
+              0
+            );
+          });
+
+          // Update manual cost when breakdown changes
+          const updateManualCostFromBreakdown = () => {
+            manualCost.value = totalBreakdownCost.value;
+          };
+
+          // Update breakdown when slider changes
+          const updateBreakdownFromManualCost = () => {
+            const total = manualCost.value;
+            // Keep proportions but adjust to new total
+            const currentTotal = totalBreakdownCost.value;
+            if (currentTotal > 0) {
+              const factor = total / currentTotal;
+              for (const key in costBreakdown.value) {
+                costBreakdown.value[key] = parseFloat(
+                  (costBreakdown.value[key] * factor).toFixed(2)
+                );
+              }
+            }
+          };
+
+          // Calculate percentage for each component
+          const calculatePercentage = (value) => {
+            if (manualCost.value === 0) return 0;
+            return Math.round((value / manualCost.value) * 100);
+          };
+
+          // [Previous computed properties remain the same]
+
+          // Watch manualCost to update breakdown
+          watch(manualCost, () => {
+            updateBreakdownFromManualCost();
+          });
+
+          // Initialize
+          updatePayrollCount();
+          updateBreakdownFromManualCost();
+
           return {
             sliderValue,
             payrollCount,
@@ -440,7 +526,6 @@
             setupFee,
             monthlyFee,
             solutionCostPerDocument,
-            showCostBreakdown,
             manualTotal,
             manualTotalYearly,
             firstMonthCost,
@@ -453,6 +538,11 @@
             cumulativeSavings,
             formatCurrency,
             updatePayrollCount,
+            costBreakdown,
+            showCostBreakdown,
+            totalBreakdownCost,
+            updateManualCostFromBreakdown,
+            calculatePercentage,
           };
         },
       }).mount("#app");
