fix: small changes for michael

--- a/calculator_onlineantrag.html
+++ b/calculator_onlineantrag.html
@@ -259,7 +259,7 @@
               <!-- Additional external costs section -->
               <div class="mt-6">
                 <h3 class="text-lg font-semibold text-secondary mb-4">
-                  Externe Kosten (gehen nicht an enmeshed)
+                  Verbliebene Verwaltungskosten
                 </h3>
                 <div class="bg-blue-50 p-4 rounded-lg border-2 border-primary">
                   <div class="space-y-2">
@@ -291,8 +291,9 @@
                       <span>€10.00</span>
                     </div>
                     <p class="text-xs text-gray-500 mt-2">
-                      * Diese Kosten entstehen für zusätzliche Services (z.B.
-                      Fachverfahren, Identprüfung) und gehen nicht an enmeshed.
+                      * Diese Kosten verbleiben für manuell bestehende Aufwände
+                      der Sachbearbeiter:innen, z.B: fachliche Prüfung und
+                      finale Freigabe
                     </p>
                   </div>
                 </div>
