--- a/calculator_onlineantrag.html
+++ b/calculator_onlineantrag.html
@@ -244,15 +244,15 @@
                       type="range"
                       v-model.number="setupFee"
                       min="1500"
-                      max="10000"
+                      max="15000"
                       step="100"
                       class="w-full h-2 bg-medium-blue rounded-lg appearance-none cursor-pointer accent-dark-blue"
                     />
                     <div class="flex justify-between text-xs text-secondary">
                       <span>€1.500</span>
-                      <span>€3.000</span>
-                      <span>€6.000</span>
+                      <span>€5.000</span>
                       <span>€10.000</span>
+                      <span>€15.000</span>
                     </div>
                   </div>
 
@@ -274,16 +274,15 @@
                       type="range"
                       v-model.number="monthlyFee"
                       min="0"
-                      max="2000"
+                      max="4500"
                       step="50"
                       class="w-full h-2 bg-medium-blue rounded-lg appearance-none cursor-pointer accent-dark-blue"
                     />
                     <div class="flex justify-between text-xs text-secondary">
                       <span>€0</span>
-                      <span>€500</span>
-                      <span>€1.000</span>
-                      <span>€1.500</span>
-                      <span>€2.000</span>
+                      <span>€1000</span>
+                      <span>€2.500</span>
+                      <span>€4.500</span>
                     </div>
                   </div>
                 </div>
@@ -450,7 +449,9 @@
           });
 
           const manualTotalYearly = computed(() => {
-            return payrollCount.value * manualCost.value;
+            return (
+              payrollCount.value * manualCost.value * municipalityCount.value
+            ); // Total yearly cost for all municipalities
           });
 
           const firstMonthCost = computed(() => {
