--- a/calculator_v4.html
+++ b/calculator_v4.html
@@ -233,8 +233,8 @@
                         <span class="font-bold text-dark-blue"
                           >{{ formatCurrency(monthlyFee) }}</span
                         >
-                        <span class="text-xs text-secondary"
-                          >(inkl. 15 Dokumente pro Mitarbeiter und Jahr)</span
+                        <span class="text-xs text-secondary"></span>
+                          (inkl. 15 Dokumente pro Mitarbeiter und Jahr)</span
                         >
                       </label>
                     </div>
