--- a/calculator_v5.html
+++ b/calculator_v5.html
@@ -342,7 +342,7 @@
               </p>
               <div class="text-xs text-secondary mt-2">
                 <p>Einrichtung: {{ formatCurrency(setupFee) }}</p>
-                <p>Monatliche Kosten: {{ formatCurrency(monthlyFee * 12) }}</p>
+                <p>Jährliche Kosten: {{ formatCurrency(monthlyFee * 12) }}</p>
                 <p>
                   Zusätzliche Dokumente: {{
                   formatCurrency(additionalDocumentsCost) }}
