Add section for Einsätze nach Postleitzahl
Added a new section with a heading and image for deployments by postal code.

--- a/heidelberg.html
+++ b/heidelberg.html
@@ -342,6 +342,15 @@
         </div>
 
         <div class="chart-card col-span-3 row-span-2">
+                <h2>Einsätze nach Postleitzahl</h2>
+                <div class="map-container">
+                    <!-- hier dein gespeichertes Kartenbild einbinden -->
+                    <img src="einsatzkarte-plz.png"
+                         alt="Einsätze nach Postleitzahl in Heidelberg">
+                </div>
+            </div>
+
+        <div class="chart-card col-span-3 row-span-2">
           <h2>Verteilung nach Postleitzahlen</h2>
           <div class="chart-container">
             <canvas id="plzChart"></canvas>
