--- a/heidelberg.html
+++ b/heidelberg.html
@@ -6,217 +6,232 @@
     <title>Heidelberg-Pass Statistik Dashboard</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.4.0/chart.umd.min.js"></script>
     <style>
-              * {
-                  margin: 0;
-                  padding: 0;
-                  box-sizing: border-box;
-              }
+                    * {
+                        margin: 0;
+                        padding: 0;
+                        box-sizing: border-box;
+                    }
 
-              body {
-                  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
-                  background-color: #f5f5f5;
-                  padding: 2rem;
-              }
+                    body {
+                        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
+                        background-color: #f5f5f5;
+                        padding: 2rem;
+                    }
 
-              .container {
-                  max-width: 1400px;
-                  margin: 0 auto;
-              }
+                    .container {
+                        max-width: 1400px;
+                        margin: 0 auto;
+                    }
 
-              .header {
-                  margin-bottom: 2rem;
-                  display: flex;
-                  align-items: center;
-                  gap: 2rem;
-                  background: white;
-                  padding: 2rem;
-                  border-radius: 0.5rem;
-                  box-shadow: 0 1px 3px rgba(0,0,0,0.1);
-              }
+                    .header {
+                        margin-bottom: 2rem;
+                        display: flex;
+                        align-items: center;
+                        gap: 2rem;
+                        background: white;
+                        padding: 2rem;
+                        border-radius: 0.5rem;
+                        box-shadow: 0 1px 3px rgba(0,0,0,0.1);
+                    }
 
-              .header-logo {
-                  flex-shrink: 0;
-              }
+                    .header-logo {
+                        flex-shrink: 0;
+                    }
 
-              .header-logo img {
-                  height: 70px;
-                  width: auto;
-              }
+                    .header-logo img {
+                        height: 70px;
+                        width: auto;
+                    }
 
-              .header-text {
-                  flex-grow: 1;
-              }
+                    .header-text {
+                        flex-grow: 1;
+                    }
 
-              .header h1 {
-                  font-size: 2.5rem;
-                  color: #9B1C62;
-                  margin-bottom: 0.5rem;
-                  font-weight: 600;
-              }
+                    .header h1 {
+                        font-size: 2.5rem;
+                        color: #9B1C62;
+                        margin-bottom: 0.5rem;
+                        font-weight: 600;
+                    }
 
-              .header p {
-                  color: #555555;
-                  font-size: 1rem;
-              }
+                    .header p {
+                        color: #555555;
+                        font-size: 1rem;
+                    }
 
-              .grid {
-                  display: grid;
-                  grid-template-columns: repeat(6, 1fr);
-                  gap: 1rem;
-              }
+                    .grid {
+                        display: grid;
+                        grid-template-columns: repeat(6, 1fr);
+                        gap: 1rem;
+                    }
 
-              .kpi-row {
-          display: grid;
-          grid-template-columns: repeat(4, 1fr);
-          gap: 1rem;
-          margin-bottom: 1rem;
+                    .kpi-row {
+                display: grid;
+                grid-template-columns: repeat(4, 1fr);
+                gap: 1rem;
+                margin-bottom: 1rem;
+            }
+
+                    .stat-card {
+                        background: white;
+                        border-radius: 0.5rem;
+                        box-shadow: 0 1px 3px rgba(0,0,0,0.1);
+                        padding: 1.5rem;
+                        border-left: 4px solid #9B1C62;
+                        grid-column: span 2;
+                    }
+
+                    .stat-card-header {
+                        display: flex;
+                        justify-content: space-between;
+                        align-items: flex-start;
+                    }
+
+                    .stat-card-title {
+                        color: #6b7280;
+                        font-size: 0.875rem;
+                        font-weight: 500;
+                    }
+
+                    .stat-card-value {
+                        font-size: 2rem;
+                        font-weight: bold;
+                        color: #1f2937;
+                        margin-top: 0.5rem;
+                    }
+
+                    .stat-card-trend {
+                        color: #10b981;
+                        font-size: 0.875rem;
+                        margin-top: 0.5rem;
+                    }
+
+                    .stat-card-icon {
+                        background: #F5E6EF;
+                        padding: 0.75rem;
+                        border-radius: 9999px;
+                    }
+
+                    .chart-card {
+                        background: white;
+                        border-radius: 0.5rem;
+                        box-shadow: 0 1px 3px rgba(0,0,0,0.1);
+                        padding: 1.5rem;
+                    }
+
+                    .chart-card h2 {
+                        font-size: 1.25rem;
+                        color: #9B1C62;
+                        margin-bottom: 1rem;
+                        font-weight: 600;
+                    }
+
+                    .chart-container {
+                        position: relative;
+                        height: 280px;
+                    }
+
+                    .legend {
+                        margin-top: 1rem;
+                    }
+
+                    .legend-item {
+                        display: flex;
+                        justify-content: space-between;
+                        align-items: center;
+                        font-size: 0.75rem;
+                        padding: 0.25rem 0;
+                    }
+
+                    .legend-label {
+                        display: flex;
+                        align-items: center;
+                        color: #374151;
+                    }
+
+                    .legend-color {
+                        width: 0.5rem;
+                        height: 0.5rem;
+                        border-radius: 9999px;
+                        margin-right: 0.5rem;
+                    }
+
+                    .legend-value {
+                        font-weight: 600;
+                        color: #1f2937;
+                    }
+
+                    .col-span-2 { grid-column: span 2; }
+                    .col-span-3 { grid-column: span 3; }
+                    .col-span-6 { grid-column: span 6; }
+                    .row-span-2 { grid-row: span 2; }
+                    .row-span-3 { grid-row: span 3; }
+
+                    table {
+                        width: 100%;
+                        font-size: 0.875rem;
+                        border-collapse: collapse;
+                        margin-top: 1.5rem;
+                    }
+
+                    thead {
+                        background-color: #f3f4f6;
+                        border-bottom: 2px solid #e5e7eb;
+                    }
+
+                    th {
+                        padding: 0.75rem;
+                        font-weight: 600;
+                        text-align: left;
+                    }
+
+                    th.text-right {
+                        text-align: right;
+                    }
+
+                    td {
+                        padding: 0.75rem;
+                        border-bottom: 1px solid #f3f4f6;
+                    }
+
+                    td.text-right {
+                        text-align: right;
+                    }
+
+                    tbody tr:hover {
+                        background-color: #f9fafb;
+                    }
+
+                    .font-medium {
+                        font-weight: 500;
+                    }
+
+                    .text-gray-700 {
+                        color: #374151;
+                    }
+
+                    .text-gray-600 {
+                        color: #4b5563;
+                    }
+
+                    svg {
+                        color: #9B1C62;
+                    }
+
+            .chart-card.map-card {
+          padding: 1rem 1rem 1.25rem;
       }
 
-              .stat-card {
-                  background: white;
-                  border-radius: 0.5rem;
-                  box-shadow: 0 1px 3px rgba(0,0,0,0.1);
-                  padding: 1.5rem;
-                  border-left: 4px solid #9B1C62;
-                  grid-column: span 2;
-              }
+      .map-container {
+          width: 100%;
+          margin-top: 0.5rem;
+      }
 
-              .stat-card-header {
-                  display: flex;
-                  justify-content: space-between;
-                  align-items: flex-start;
-              }
-
-              .stat-card-title {
-                  color: #6b7280;
-                  font-size: 0.875rem;
-                  font-weight: 500;
-              }
-
-              .stat-card-value {
-                  font-size: 2rem;
-                  font-weight: bold;
-                  color: #1f2937;
-                  margin-top: 0.5rem;
-              }
-
-              .stat-card-trend {
-                  color: #10b981;
-                  font-size: 0.875rem;
-                  margin-top: 0.5rem;
-              }
-
-              .stat-card-icon {
-                  background: #F5E6EF;
-                  padding: 0.75rem;
-                  border-radius: 9999px;
-              }
-
-              .chart-card {
-                  background: white;
-                  border-radius: 0.5rem;
-                  box-shadow: 0 1px 3px rgba(0,0,0,0.1);
-                  padding: 1.5rem;
-              }
-
-              .chart-card h2 {
-                  font-size: 1.25rem;
-                  color: #9B1C62;
-                  margin-bottom: 1rem;
-                  font-weight: 600;
-              }
-
-              .chart-container {
-                  position: relative;
-                  height: 280px;
-              }
-
-              .legend {
-                  margin-top: 1rem;
-              }
-
-              .legend-item {
-                  display: flex;
-                  justify-content: space-between;
-                  align-items: center;
-                  font-size: 0.75rem;
-                  padding: 0.25rem 0;
-              }
-
-              .legend-label {
-                  display: flex;
-                  align-items: center;
-                  color: #374151;
-              }
-
-              .legend-color {
-                  width: 0.5rem;
-                  height: 0.5rem;
-                  border-radius: 9999px;
-                  margin-right: 0.5rem;
-              }
-
-              .legend-value {
-                  font-weight: 600;
-                  color: #1f2937;
-              }
-
-              .col-span-2 { grid-column: span 2; }
-              .col-span-3 { grid-column: span 3; }
-              .col-span-6 { grid-column: span 6; }
-              .row-span-2 { grid-row: span 2; }
-              .row-span-3 { grid-row: span 3; }
-
-              table {
-                  width: 100%;
-                  font-size: 0.875rem;
-                  border-collapse: collapse;
-                  margin-top: 1.5rem;
-              }
-
-              thead {
-                  background-color: #f3f4f6;
-                  border-bottom: 2px solid #e5e7eb;
-              }
-
-              th {
-                  padding: 0.75rem;
-                  font-weight: 600;
-                  text-align: left;
-              }
-
-              th.text-right {
-                  text-align: right;
-              }
-
-              td {
-                  padding: 0.75rem;
-                  border-bottom: 1px solid #f3f4f6;
-              }
-
-              td.text-right {
-                  text-align: right;
-              }
-
-              tbody tr:hover {
-                  background-color: #f9fafb;
-              }
-
-              .font-medium {
-                  font-weight: 500;
-              }
-
-              .text-gray-700 {
-                  color: #374151;
-              }
-
-              .text-gray-600 {
-                  color: #4b5563;
-              }
-
-              svg {
-                  color: #9B1C62;
-              }
+      .map-container img {
+          width: 100%;
+          height: auto;
+          display: block;
+      }
     </style>
   </head>
   <body>
@@ -341,14 +356,15 @@
           <div class="legend" id="pieLegend"></div>
         </div>
 
-        <div class="chart-card col-span-3 row-span-2">
-                <h2>Einsätze nach Postleitzahl</h2>
-                <div class="map-container">
-                    <!-- hier dein gespeichertes Kartenbild einbinden -->
-                    <img src="einsatzkarte-plz.png"
-                         alt="Einsätze nach Postleitzahl in Heidelberg">
-                </div>
-            </div>
+        <div class="chart-card map-card col-span-3 row-span-2">
+          <h2>Einsätze nach Postleitzahl</h2>
+          <div class="map-container">
+            <img
+              src="heidelberg-plz-map.png"
+              alt="Einsätze nach Postleitzahl in Heidelberg"
+            />
+          </div>
+        </div>
 
         <div class="chart-card col-span-3 row-span-2">
           <h2>Verteilung nach Postleitzahlen</h2>
