Update map image source in heidelberg.html

--- a/heidelberg.html
+++ b/heidelberg.html
@@ -360,7 +360,7 @@
           <h2>Einsätze nach Postleitzahl</h2>
           <div class="map-container">
             <img
-              src="heidelberg-plz-map.png"
+              src="einsatzkarte-plz.png"
               alt="Einsätze nach Postleitzahl in Heidelberg"
             />
           </div>
