Revise COLORS array with detailed color descriptions
Updated color palette with descriptive comments for each color.

--- a/heidelberg.html
+++ b/heidelberg.html
@@ -398,7 +398,14 @@
     </div>
 
     <script>
-      var COLORS = ['#9B1C62', '#C4267D', '#D63384', '#E65C9B', '#F285B2', '#FFADD2'];
+      var COLORS = [
+    "#9B1C62", // Heidelberg-Magenta (Primär)
+    "#DB007D", // kräftiges Pink-Magenta (viel heller & satter)
+    "#FF5C8A", // helles Hot Pink, klar kontrastiert
+    "#FFD2E1", // sehr helles Rosa als High-Key-Kontrast
+    "#4A154B", // tiefdunkles Aubergine (starker Kontrast)
+    "#2D0B24"  // fast schwarzviolett für maximale Abgrenzung
+];
 
       var locationData = [
           { name: 'Kinos', count: 1580, percentage: 28 },
